--- a/README.rdoc
+++ b/README.rdoc
@@ -36,9 +36,9 @@ This simple plugin gives you the ability to call to_csv to a collection of activ
 
 == Install
 
-  ./script/plugin install git@github.com:wenke/to_csv.git
+  ./script/plugin install git://github.com/wenke/to_csv.git
 
 
 == Note
 
-Copyright (c) 2010 Wenke Liang, released under the MIT license
+Copyright (c) 2010 liangwenke8@gmail.com, released under the MIT license
