--- a/README.rdoc
+++ b/README.rdoc
@@ -36,6 +36,8 @@ This simple plugin gives you the ability to call to_csv to a collection of activ
 
 == Install
 
+  git clone http://github.com/wenke/to_csv.git OR
+  
   ./script/plugin install git://github.com/wenke/to_csv.git
 
 
