--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,10 @@
   first commit
 
 0.1.1
-  update document
+  Update document
 
 0.1.3
-  added custom header column names
+  Added custom header column names
+
+0.1.4
+  Fixed commas and " are not escaped
