--- a/README.rdoc
+++ b/README.rdoc
@@ -3,9 +3,34 @@
 This simple plugin gives you the ability to call to_csv to a collection of activerecords. The builder options are the same as to_json / to_xml, except for the :include.
 
 
-== Usage
+== Getting Started
 
-  @posts = Post.all
+In your Gemfile:
+
+  gem 'to_csv-rails'# Last officially released gem
+  # gem "meta_search", :git => "git://github.com/liangwenke/to_xls-rails.git" # Track git repo
+
+or, to install as a gem:
+
+  gem install to_csv-rails
+
+or, to install as a plugin:
+
+  rails plugin install git://github.com/liangwenke/to_xls-rails.git
+
+In your controller:
+
+  def index
+    @posts = Post.all
+
+    respond_to do |format|
+      format.csv { send_data(@posts.to_csv) }
+      # format.csv {
+      #   filename = "posts-#{Time.now.strftime("%Y%m%d%H%M%S")}.csv"
+      #   send_data(@posts.to_csv, :type => "text/csv; charset=utf-8; header=present", :filename => filename)
+      # }
+    end
+  end
 
   #
   #  default are export header and all fileds
@@ -17,32 +42,6 @@ This simple plugin gives you the ability to call to_csv to a collection of activ
   @posts.to_csv(:header => false)
 
 
-== Example
-
-  class PostsController < ApplicationController
-    def index
-      @posts = Post.all
-
-      respond_to do |format|
-        format.csv { send_data(@posts.to_csv) }
-        # format.csv {
-        #   filename = "posts-#{Time.now.strftime("%Y%m%d%H%M%S")}.csv"
-        #   send_data(@posts.to_csv, :type => "text/csv; charset=utf-8; header=present", :filename => filename)
-        # }
-      end
-    end
-  end
-
-
-== Install
-
-  gem install to_csv-rails
-
-  gem 'to_csv-rails'
-  bundle install
-
-  git clone http://github.com/liangwenke/to_csv-rails.git
-
-== Note
+== Copyright
 
 Copyright (c) 2010 liangwenke.com@gmail.com, released under the MIT license
