--- a/README.rdoc
+++ b/README.rdoc
@@ -26,7 +26,7 @@ In your controller:
     respond_to do |format|
       format.csv { send_data(@posts.to_csv) }
       # format.csv {
-      #   filename = "posts-#{Time.now.strftime("%Y%m%d%H%M%S")}.csv"
+      #   filename = "Posts-#{Time.now.strftime("%Y%m%d%H%M%S")}.csv"
       #   send_data(@posts.to_csv, :type => "text/csv; charset=utf-8; header=present", :filename => filename)
       # }
     end
